--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello everyone</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptatem cumque,</p>
+    <h1>Hello cambodia</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptatem cumque, Angkor Wat in cambodia</p>
 </body>
 </html>
